*SVN*

* Added insert_at(position) to acts_as_list #1083 [DeLynnB]

* Removed the default order by id on has_and_belongs_to_many queries as it could kill performance on large sets (you can still specify by hand with :order)

* Fixed that Base.silence should restore the old logger level when done, not just set it to DEBUG #1084 [yon@milliped.com]

* Fixed boolean saving on Oracle #1093 [mparrish@pearware.org]

* Moved build_association and create_association for has_one and belongs_to out of deprecation as they work when the association is nil unlike association.build and association.create, which require the association to be already in place #864

* Added rollbacks of transactions if they're active as the dispatcher is killed gracefully (TERM signal) #1054 [Leon Bredt]

* Added quoting of column names for fixtures #997 [jcfischer@gmail.com]

* Fixed counter_sql when no records exist in database for PostgreSQL (would give error, not 0) #1039 [Caleb Tennis]

* Fixed that benchmarking times for rendering included db runtimes #987 [skaes@web.de]

* Fixed boolean queries for t/f fields in PostgreSQL #995 [dave@cherryville.org]

* Added that model.items.delete(child) will delete the child, not just set the foreign key to nil, if the child is dependent on the model #978 [bitsweat]

* Fixed auto-stamping of dates (created_on/updated_on) for PostgreSQL #985 [dave@cherryville.org]

* Fixed Base.silence/benchmark to only log if a logger has been configured #986 [skaes@web.de]

* Added a join parameter as the third argument to Base.find_first and as the second to Base.count #426, #988 [skaes@web.de]

* Fixed bug in Base#hash method that would treat records with the same string-based id as different [Dave Thomas]

* Renamed DateHelper#distance_of_time_in_words_to_now to DateHelper#time_ago_in_words (old method name is still available as a deprecated alias)


*1.9.1* (27th March, 2005)

* Fixed that Active Record objects with float attribute could not be cloned #808
