@@ -18,3 +18,21 @@ class ListWithStringScopeMixin < ActiveRecord::Base
 
   def self.table_name() "mixins" end
 end
+
+class NestedSet < Mixin
+  acts_as_nested_set :scope => "ROOT_ID IS NULL"
+  
+  def self.table_name() "mixins" end
+end
+
+class NestedSetWithStringScope < Mixin
+  acts_as_nested_set :scope => 'root_id = #{root_id}'
+  
+  def self.table_name() "mixins" end
+end
+
+class NestedSetWithSymbolScope < Mixin
+  acts_as_nested_set :scope => :root
+  
+  def self.table_name() "mixins" end
+end
